// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`gqlSlice arrays should be handled properly 1`] = `
Object {
  "field2": Array [
    "field2",
  ],
}
`;

exports[`gqlSlice deep nested fields should be deeply resolved 1`] = `
Object {
  "field2": Object {
    "deeperField": Object {
      "deeperInner1": "deeperInner1",
    },
    "innerField2": "innerField2",
  },
}
`;

exports[`gqlSlice deep nested fields should be resolved 1`] = `
Object {
  "field2": Object {
    "deeperField": Object {
      "deeperInner1": "deeperInner1",
      "deeperInner2": "deeperInner2",
    },
    "innerField1": "innerField1",
    "innerField2": "innerField2",
  },
}
`;

exports[`gqlSlice deep nested fields should be resolved 2`] = `
Object {
  "field2": Array [
    Object {
      "innerField2": "innerField12",
    },
    Object {
      "innerField2": "innerField22",
    },
    Object {
      "innerField2": "innerField32",
    },
  ],
}
`;

exports[`gqlSlice filters out field 1`] = `
Object {
  "field1": "field1",
}
`;

exports[`gqlSlice flatten should flatten the array 1`] = `
Object {
  "field1": Array [
    Object {
      "a": 1,
      "b": 2,
    },
    Object {
      "a": 3,
      "b": 4,
    },
    Object {
      "c": 3,
    },
    Object {
      "c": 6,
    },
  ],
}
`;

exports[`gqlSlice flatten should flatten the array with pick 1`] = `
Object {
  "field1": Array [
    1,
    3,
    3,
    6,
  ],
}
`;

exports[`gqlSlice flatten should flatten the object 1`] = `
Object {
  "field1": Object {
    "a": 1,
    "b": 2,
    "c": 3,
  },
}
`;

exports[`gqlSlice ignore fields not specified 1`] = `
Object {
  "field1": "field1",
}
`;

exports[`gqlSlice limit should limit the array 1`] = `
Object {
  "field1": Array [
    1,
    2,
  ],
}
`;

exports[`gqlSlice pick should pick the array to array 1`] = `
Object {
  "field1": Array [
    1,
    3,
    5,
  ],
}
`;

exports[`gqlSlice pick should pick the array, to array of arrays 1`] = `
Object {
  "field1": Array [
    Array [
      1,
      2,
    ],
    Array [
      3,
      4,
    ],
    Array [
      5,
      6,
    ],
  ],
}
`;
